visibility issues

--- a/adcolony/less/adcolony-trash.less
+++ b/adcolony/less/adcolony-trash.less
@@ -1,10 +1,15 @@
 .trash-icon{
-	background: url(/img/trash-icon.png);
 	border: none;
 	background-repeat: no-repeat;
-	width: 20px;
-	height: 20px;
-	display: none;
+	background-color: transparent;
+	//width: 5px;
+	//height: 10px;
+	visibility: hidden;
+	//opacity: 0;
+	//display: none;
 }
 
-tr:hover .trash-icon{display:inline;}
+tr:hover .trash-icon{
+	//display:inline;
+	visibility: visible;
+}
